rendered-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-alpha-app
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: alexanderkachar.com
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - alexanderkachar.com
      secretName: alexanderkachar-com-tls
  rules:
    - host: alexanderkachar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-alpha-app
                port:
                  number: 80
